// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonComponent test suite should have correct props and layout between loading states 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 4,
        "height": 100,
        "marginBottom": 10,
        "overflow": "hidden",
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "height": 100,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateX": -240,
            },
          ],
          "width": 240,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            4292995566,
            4294113532,
            4292995566,
          ]
        }
        endPoint={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 4,
        "height": 40,
        "overflow": "hidden",
        "width": 180,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateX": -180,
            },
          ],
          "width": 180,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            4292995566,
            4294113532,
            4292995566,
          ]
        }
        endPoint={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`SkeletonComponent test suite should have the correct layout when loading 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 4,
        "height": 100,
        "marginBottom": 10,
        "overflow": "hidden",
        "width": 240,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "grey",
        "borderRadius": 20,
        "height": 40,
        "overflow": "hidden",
        "width": 180,
      }
    }
  />
</View>
`;

exports[`SkeletonComponent test suite should render empty alone 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`SkeletonComponent test suite should render the correct bones for children 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(225, 233, 238, 1)",
        "borderRadius": 4,
        "height": 100,
        "width": 200,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(225, 233, 238, 1)",
        "borderRadius": 4,
        "height": 120,
        "width": 20,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(225, 233, 238, 1)",
        "borderRadius": 4,
        "height": 80,
        "width": 240,
      }
    }
  />
</View>
`;

exports[`SkeletonComponent test suite should support nested layouts 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 300,
        "width": 320,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#E1E9EE",
          "borderRadius": 4,
          "height": 120,
          "overflow": "hidden",
          "width": 200,
        }
      }
    >
      <View
        style={
          Object {
            "height": 120,
            "position": "absolute",
            "transform": Array [
              Object {
                "translateX": -200,
              },
            ],
            "width": 200,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              4292995566,
              4294113532,
              4292995566,
            ]
          }
          endPoint={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          locations={null}
          startPoint={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E1E9EE",
          "borderRadius": 4,
          "height": 100,
          "overflow": "hidden",
          "width": 180,
        }
      }
    >
      <View
        style={
          Object {
            "height": 100,
            "position": "absolute",
            "transform": Array [
              Object {
                "translateX": -180,
              },
            ],
            "width": 180,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              4292995566,
              4294113532,
              4292995566,
            ]
          }
          endPoint={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          locations={null}
          startPoint={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "grey",
        "borderRadius": 20,
        "height": 40,
        "overflow": "hidden",
        "width": 180,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateX": -180,
            },
          ],
          "width": 180,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            4292995566,
            4294113532,
            4292995566,
          ]
        }
        endPoint={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`SkeletonComponent test suite should support percentage for child size 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 300,
      "width": 320,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "grey",
        "borderRadius": 20,
        "height": "50%",
        "overflow": "hidden",
        "width": "20%",
      }
    }
  >
    <View
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateX": -0,
            },
          ],
          "width": 0,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            4292995566,
            4294113532,
            4292995566,
          ]
        }
        endPoint={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 10,
        "height": "10%",
        "overflow": "hidden",
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateX": -0,
            },
          ],
          "width": 0,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            4292995566,
            4294113532,
            4292995566,
          ]
        }
        endPoint={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;
